--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.1",
+    "tailwindcss": "^2.2.16",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.3.0"
   }
 }
